<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <snowroller.myapplication.preferences.EditTextPreferenceWithSummary
        android:defaultValue="3206"
        android:key="skierid_preference"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/preferences_skier_id_pref"
        android:title="@string/preferences_skier_id" />
    <EditTextPreference
        android:defaultValue="13"
        android:key="seasonid_preference"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/preferences_season_id_pref"
        android:title="@string/preferences_season" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="background_updates_preference"
        android:title="@string/preferences_automatic_updates_title" />
    <ListPreference
        android:defaultValue="30"
        android:dependency="background_updates_preference"
        android:entries="@array/frequency"
        android:entryValues="@array/frequency"
        android:key="update_frequency_preference"
        android:summary="@string/preferences_update_interval_pref"
        android:title="@string/preferences_update_interval" />
</PreferenceScreen>